@@ -52,7 +52,7 @@ my $task = Remedi::METS::App->new(
         isil => 'DE-355',
         library_union_id => 'bvb',
         log_config_path => path($Bin, qw(config log4perl.conf)),
-#        log_level => 'TRACE',
+        log_level => 'TRACE',
         isil => 'DE-355',
         print_source_holder => 'Staatliche Bibliothek Regensburg',
         regex_filestem_prefix => qr/ubr\d{5}/,
